<resources>
    <string name="app_name">Okidos</string>
    <string name="drawertext1">Drawer Header</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="AdminHometext1">PRODUCT DETAILS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laytab1">Home</string>
    <string name="laytab2">Category</string>
    <string name="laytab3">New Stock</string>
    <string-array name="category">
        <item>Men</item>
        <item>Women</item>

    </string-array>

    <string name="AddPrdDetails">Add Product Details</string>
    <string name="prdname">Product Name :</string>
    <string name="PrdCatogry">Product Category :</string>
    <string name="AvSize">Available Sizes :</string>
    <string name="clor">Colours :</string>
    <string name="descrip">Description :</string>
    <string name="uploadImg">Upload Image :</string>
    <string name="choseImg">Choose Image</string>
    <string name="editBtn">Edit</string>
    <string name="dltBtn">Delete</string>
    <string name="pr1">Crocodile SLIM-FIT</string>
    <string name="uptprddet">Update Product Details</string>


</resources>